# roc2nix

./: .gitignore  README.md  fetchHelper.sh  flake.nix
examples/: default.nix  simple.nix  simple.roc
examples/build-a-platform/: default.nix  main.roc  readme.md
examples/build-a-platform/c-platform/: default.nix
examples/build-a-platform/platform-switching/c-platform/: default.nix
examples/build-a-platform/rust/: default.nix
examples/build-a-platform/rust-platform/: Cargo.toml  default.nix
examples/build-a-platform/rust/platform/: default.nix
examples/multiple-packages/: default.nix  main.roc
examples/multiple-platforms/: default.nix
examples/simple/: default.nix  main.roc
lib/: buildRocApp.nix  buildRocPlatform.nix  bundleRocPackage.nix  combineRocDeps.nix  default.nix  downloadMultipleRocPackages.nix  downloadRocPackage.nix  languageFilters.nix  mkRocDerivation.nix  mkRocPackage.nix
lib/platformBuilders/: buildCPlatform.nix  buildRustPlatform.nix
lib/setupHooks/: rocHelperFunctions.nix  rocHelperFunctions.sh
nix/: buildRocPackage.nix  fetchHelper.sh
nix/example/: default.nix  simple.nix
templates/: default.nix
templates/quick-start/: flake.nix
templates/quick-start/src/: main.roc
