[package]
name = "host"
authors = ["The Roc Contributors"]
edition = "2021"
license = "ro-1.0"
links = "app"
version = "0.0.1"

[lib]
name = "host"
path = "src/lib.rs"
crate-type = ["staticlib", "rlib"]

[[bin]]
name = "host"
path = "src/main.rs"

[dependencies]
libc = "0.2"
roc_std = { git = "https://github.com/roc-lang/roc", rev = "3d8884a96d44e2101ce8932336b74e2b9416e029" }

[workspace]
